# alex

./: .gitignore  ALEX_RECOVERY_REPORT.md  APPLICATION_STATE_FEB4.md  APP_SUMMARY.md  AWS_COST_REDUCTION.md  CLAUDE.md  CLAUDE_CODE_SYSTEM_REQUIREMENTS.md  DEPLOYMENT_TESTING_SETUP.md  GCL_ALTERNATIVE_BRANCH_STATUS.md  GITHUB_BEST_PRACTICES.md  HANDOFF_EXECUTION_TIMING.md  HANDOFF_PROGRESS_TRACKING.md  INFRASTRUCTURE_ALEX.md  KB_FILE_STRUCTURE.md  KB_NOTES.md  KB_NOTES_TEMPLATE.md  KB_PROMPT_GRAPHICAL.md  KB_START_GUIDE.md  MIGRATION.md  NEXT_SESSION_QUICKSTART.md  PROGRESS_TRACKING_IMPLEMENTATION.md  PROGRESS_TRACKING_ISSUES_SUMMARY.md  README.md  REAL_TIME_DEBUGGING_PLAN.md  SESSION_2025-11-28_SUMMARY.md  START_SERVER_README.md  TEMPLATE_AWS.md  TEMPLATE_CONSTRUCT.md  VM_SETUP.md  check_analysis_jobs.py  check_database_schema.py  check_job_timing.py  check_jobs.py  check_latest_job.py  course.md  kb_start.py  kb_stop.py  start_dev_server.py  stop_dev_server.py  test_api_job_status.py  (+3 more)
TESTING_CODE_GUIDES/: TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_QUICK_REFERENCE.md
backend/: README_TESTING.md  run_all_tests.py  test_full.py
backend/database/: gcp_setup.py  pyproject.toml  reset_db.py  run_migrations.py  seed_data_gcp.py  seed_data_kb.py
backend/database/KB_DEBUG/: confirm_db.py  debug_positions.py  debug_positions_1.py
backend/database/migrations/: 002_add_progress_tracking.sql  003_fundamentals.sql  004_economic_indicators.sql  005_technical_indicators.sql
backend/database/src/: __init__.py  analysis_history_models.py  client.py  economic_models.py  market_data_models.py  models.py  schemas.py  technical_models.py
backend/database/tests/: __init__.py  conftest.py  test_models.py  test_schemas.py
backend/database_gcp/: README.md  pyproject.toml  test_client.py
backend/database_gcp/src/: __init__.py  client.py  models.py
backend/market_data/: pyproject.toml
backend/market_data/src/market_data/: __init__.py  fmp.py  fred.py  polygon_prices.py  prices.py  sentiment.py  technical.py
backend/market_data/tests/: test_fmp.py  test_fred.py  test_sentiment.py
backend/tagger_gcp/: .env.example  Dockerfile  README.md  agent.py  build_and_push.py  main.py  pyproject.toml  schemas.py
(+194 files in other folders)
