[project]
name = "alex-database"
version = "0.1.0"
description = "Database package for Alex Financial Planner with Aurora Data API"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.8",
    "cloud-sql-python-connector>=1.18.5",
    "pg8000>=1.31.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "moto>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
