[project]
name = "alex-database-gcp"
version = "0.1.0"
description = "Alex Financial Planner - GCP Database Library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-sql-python-connector>=1.18.5",
    "pg8000>=1.31.5",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
