[project]
name = "alex-market-data"
version = "0.1.0"
description = "Shared market data service for Alex Financial Planner"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.1",
    "httpx>=0.28.0",
    "polygon-api-client>=1.15.3",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data"]
